--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -13,3 +13,10 @@
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
 }
+
+.content {
+    flex-grow: 1;
+    padding: 5px 20px;
+    display: flex;
+    flex-direction: columnc;
+}
