Adding src to img of documents

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,7 +7,6 @@
 
 .app {
     min-height: 100vh;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
@@ -15,7 +14,7 @@
 }
 
 .content {
-    flex-grow: 1;
+    flex: 1;
     padding: 10px 30px 5px 30px;
     display: flex;
     flex-direction: columnc;
