--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./reset.scss";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
-
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
