--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -15,8 +15,8 @@
 }
 
 .content {
-    flex: 1;
-    padding: 10px 30px 5px 30px;
+    flex-grow: 1;
+    padding: 30px 30px 5px 30px;
 }
 
 .loader {
